--- a/.stylelintrc
+++ b/.stylelintrc
@@ -5,6 +5,7 @@
     "stylelint-config-css-modules",
     "stylelint-config-lost"
   ],
+  "customSyntax": "postcss-html",
   "ignoreFiles": [
     "./**/*.js"
   ],
