--- a/package.json
+++ b/package.json
@@ -13,41 +13,34 @@
     "lint:css": "stylelint \"packages/**/*.vue\""
   },
   "devDependencies": {
-    "@babel/eslint-parser": "7.15.7",
-    "@commitlint/cli": "13.1.0",
-    "@commitlint/config-conventional": "13.1.0",
+    "@babel/eslint-parser": "7.16.3",
+    "@commitlint/cli": "15.0.0",
+    "@commitlint/config-conventional": "15.0.0",
+    "@nuxtjs/eslint-config": "^7.0.0",
     "@mapbox/stylelint-processor-arbitrary-tags": "0.4.0",
     "babel-preset-vue": "2.0.2",
     "branch-name-lint": "2.1.1",
-    "commitlint": "13.1.0",
-    "eslint": "7.32.0",
+    "commitlint": "15.0.0",
+    "eslint": "8.3.0",
     "eslint-formatter-json-relative": "0.1.0",
     "eslint-plugin-html": "6.2.0",
     "eslint-plugin-json": "3.1.0",
     "eslint-plugin-no-secrets": "0.8.9",
-    "eslint-plugin-no-unsanitized": "3.1.5",
-    "eslint-plugin-nuxt": "2.0.0",
-    "eslint-plugin-promise": "5.1.0",
+    "eslint-plugin-no-unsanitized": "4.0.0",
+    "eslint-plugin-nuxt": "3.0.0",
     "eslint-plugin-security": "1.4.0",
-    "eslint-plugin-sonarjs": "0.10.0",
-    "eslint-plugin-vue": "7.12.1",
+    "eslint-plugin-vue": "8.1.1",
     "eslint-plugin-xss": "0.1.11",
-    "husky": "7.0.2",
-    "lint-staged": "11.1.2",
-    "standard": "16.0.3",
-    "stylelint": "13.13.1",
-    "stylelint-config-css-modules": "2.2.0",
+    "husky": "7.0.4",
+    "lint-staged": "12.1.2",
+    "standard": "16.0.4",
+    "stylelint": "14.1.0",
+    "stylelint-config-css-modules": "2.3.0",
     "stylelint-config-lost": "0.0.3",
-    "stylelint-config-recess-order": "2.5.0",
-    "stylelint-config-standard": "22.0.0"
+    "stylelint-config-recess-order": "3.0.0",
+    "stylelint-config-standard": "24.0.0"
   },
   "workspaces": [
     "./packages/*"
-  ],
-  "optionalDependencies": {
-    "postcss": "8.3.7"
-  },
-  "dependencies": {
-    "@nuxtjs/eslint-config": "^6.0.1"
-  }
+  ]
 }
