--- a/packages/sample/package.json
+++ b/packages/sample/package.json
@@ -28,19 +28,20 @@
     "@nuxt/postcss8": "1.1.3",
     "@nuxtjs/eslint-module": "3.0.2",
     "@nuxtjs/stylelint-module": "4.0.0",
-    "babel-loader": "8.2.2",
-    "core-js": "3.18.1",
+    "babel-loader": "8.2.3",
+    "core-js": "3.19.1",
+    "js-yaml": "^4.1.0",
     "lost": "8.3.1",
     "nuxt": "2.15.8",
     "postcss-momentum-scrolling": "3.14.22",
     "postcss-normalize": "10.0.1",
-    "rucksack-css": "1.0.2"
+    "rucksack-css": "1.0.2",
+    "vue-svg-loader": "^0.16.0"
   },
   "devDependencies": {
-    "@vue/test-utils": "1.2.2",
-    "babel-core": "6.26.3",
-    "babel-jest": "27.2.2",
-    "jest": "27.2.2",
+    "@vue/test-utils": "1.3.0",
+    "babel-jest": "27.3.1",
+    "jest": "27.3.1",
     "vue-jest": "3.0.7"
   }
 }
