--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "postcss": "8.3.7"
   },
   "dependencies": {
-    "@nuxtjs/eslint-config": "^6.0.1"
+    "@js-basics/vector": "^1.57.3",
+    "@nuxtjs/eslint-config": "^6.0.1",
+    "vue-slick-carousel": "^1.0.6"
   }
 }
