feat(core): imagetext / stage / sample page

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,18 +3,19 @@
     "version": "1.0.0",
     "author": "Thorn-Welf Walli",
     "contributors": [
-      {
-        "name": "Thorn-Welf Walli",
-        "email": "thorn.walli@grabarzundpartner.de"
-      },
-      {
-        "name": "Jan Szidat",
-        "email": "jan.szidat@grabarzundpartner.de"
-      }
+        {
+            "name": "Thorn-Welf Walli",
+            "email": "thorn.walli@grabarzundpartner.de"
+        },
+        {
+            "name": "Jan Szidat",
+            "email": "jan.szidat@grabarzundpartner.de"
+        }
     ],
     "license": "MIT",
     "private": true,
     "scripts": {},
-    "dependencies": {}
-  }
-  
+    "dependencies": {
+        "nuxt-speedkit": "^2.0.0-beta.16"
+    }
+}
