--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-xss": "0.1.11",
     "husky": "7.0.4",
     "lint-staged": "12.1.2",
+    "postcss-html": "^1.3.0",
     "rxjs": "^7.4.0",
     "standard": "16.0.4",
     "stylelint": "14.1.0",
@@ -44,6 +45,7 @@
     "vue-slick-carousel": "^1.0.6"
   },
   "workspaces": [
-    "./packages/*"
+    "./packages/core",
+    "./packages/sample"
   ]
 }
