--- a/packages/sample/package.json
+++ b/packages/sample/package.json
@@ -27,12 +27,13 @@
   "dependencies": {
     "@nuxt/postcss8": "1.1.3",
     "@nuxtjs/eslint-module": "3.0.2",
-    "@nuxtjs/stylelint-module": "4.0.0",
+    "@nuxtjs/stylelint-module": "4.1.0",
     "babel-loader": "8.2.3",
-    "core-js": "3.19.1",
+    "core-js": "3.20.2",
     "js-yaml": "^4.1.0",
     "lost": "8.3.1",
     "nuxt": "2.15.8",
+    "postcss-custom-media": "^7.0.8",
     "postcss-momentum-scrolling": "3.14.22",
     "postcss-normalize": "10.0.1",
     "rucksack-css": "1.0.2",
@@ -40,8 +41,8 @@
   },
   "devDependencies": {
     "@vue/test-utils": "1.3.0",
-    "babel-jest": "27.3.1",
-    "jest": "27.3.1",
+    "babel-jest": "27.4.6",
+    "jest": "27.4.7",
     "vue-jest": "3.0.7"
   }
 }
