--- a/packages/sample/package.json
+++ b/packages/sample/package.json
@@ -34,8 +34,10 @@
     "lost": "8.3.1",
     "nuxt": "2.15.8",
     "postcss-custom-media": "^7.0.8",
+    "postcss-functions": "^4.0.2",
     "postcss-momentum-scrolling": "3.14.22",
     "postcss-normalize": "10.0.1",
+    "rfs": "^10.0.0-alpha.0",
     "rucksack-css": "1.0.2",
     "vue-svg-loader": "^0.16.0"
   },
