--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "postinstall": "husky install",
-    "test": "npm run lint && npm run build --workspace=@foundation/sample",
+    "test": "npm run lint && npm run build",
     "dev": "npm run dev --workspace=@foundation/sample",
     "build": "npm run build --workspace=@foundation/sample",
     "start": "npm run start --workspace=@foundation/sample",
