--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "npm run lint",
     "dev": "npm run dev --workspace=@foundation/sample",
     "build": "npm run build --workspace=@foundation/sample",
+    "generate": "npm run generate --workspace=@foundation/sample",
     "start": "npm run start --workspace=@foundation/sample",
     "lint": "npm run lint:es && npm run lint:css",
     "lint:es": "eslint --ext .js,.vue .",
