--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
     "stylelint-config-css-modules": "3.0.0",
     "stylelint-config-lost": "0.0.3",
     "stylelint-config-recess-order": "3.0.0",
-    "stylelint-config-standard": "25.0.0",
-    "vue-slick-carousel": "1.0.6"
+    "stylelint-config-standard": "25.0.0"
   },
   "workspaces": [
     "./packages/core",
