--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,7 +18,6 @@
     "dependencies": {
         "@splidejs/splide": "3.6.12",
         "@splidejs/splide-extension-intersection": "0.1.6",
-        "nuxt-speedkit": "2.0.6",
-        "vue-headings": "^1.0.0"
+        "nuxt-speedkit": "2.0.6"
     }
 }
