--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "postinstall": "husky install",
-    "test": "npm run lint",
+    "test": "npm run lint && npm run test --workspace=@foundation/sample",
     "dev": "npm run dev --workspace=@foundation/sample",
     "build": "npm run build --workspace=@foundation/sample",
     "generate": "npm run generate --workspace=@foundation/sample",
