--- a/.stylelintrc
+++ b/.stylelintrc
@@ -22,9 +22,10 @@
         ]
       }
     ],
-    "selector-class-pattern": null,
     "block-closing-brace-empty-line-before": null,
     "max-empty-lines": null,
+    "selector-class-pattern": null,
+    "selector-id-pattern": null,
     "no-descending-specificity": null,
     "value-keyword-case": [
       "lower",
@@ -36,8 +37,26 @@
       true,
       {
         "ignoreFunctions": [
+          "lost-vars",
           "em",
           "vw"
+        ]
+      }
+    ],
+    "selector-pseudo-class-no-unknown": [
+      true,
+      {
+        "ignorePseudoClasses": [
+          "global",
+          "deep"
+        ]
+      }
+    ],
+    "selector-pseudo-element-no-unknown": [
+      true,
+      {
+        "ignorePseudoElements": [
+          "v-deep"
         ]
       }
     ]
