--- a/packages/sample/package.json
+++ b/packages/sample/package.json
@@ -31,25 +31,25 @@
     "core-js": "3.25.5",
     "dotenv": "16.0.3",
     "js-yaml": "4.1.0",
-    "lost": "8.3.1",
+    "lost": "^9.0.1",
     "nuxt": "2.15.8",
     "nuxt-speedkit": "2.0.22",
     "postcss-custom-media": "8.0.2",
     "postcss-functions": "4.0.2",
     "postcss-momentum-scrolling": "3.14.22",
     "postcss-normalize": "10.0.1",
-    "postcss-preset-env": "6.7.0",
+    "postcss-preset-env": "^7.8.2",
     "rucksack-css": "1.0.2",
     "vue-svg-loader": "0.16.0"
   },
   "devDependencies": {
-    "get-port-please": "2.6.1",
-    "h3": "0.8.1",
+    "finalhandler": "^1.2.0",
+    "get-port-please": "^2.6.1",
     "html-validator": "6.0.1",
     "jsdom": "20.0.1",
-    "listhen": "0.3.4",
     "playwright": "1.27.1",
     "serve-static": "1.15.0",
+    "vite": "^3.1.8",
     "vitest": "0.24.3"
   }
 }
